# frl_rosbot_onboard

./: CMakeLists.txt  Dockerfile  LICENCE  LICENCE.md  README.md  package.xml
.github/workflows/: docker_ci.yml  main.yml
config/: amcl.yaml  nav2_params_pro.yaml
config/map/: map_1673974807.pgm  mpeb417_map.yaml
config/rosbot_move_base/: costmap_common_params.yaml  exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/urdf/: rosbot.xacro
docker/rosbot_gazebo_vnc-noetic/: Dockerfile
docker/rviz_vnc/: Dockerfile
docker_ci/: Dockerfile
frl_rosbot_onboard/: basic_navigator.py
launch/: bringup_base_sensors.launch  frl_rosbot_bringup_launch.py  frl_rosbot_nav_launch.py  loc_launch.py  nav_bringup_launch.py  path_plan_server.launch  robot_state_publisher_launch.py
multi-ugv_client/: basic_navigator.py
scripts/: waypoint_following.py
