<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frl_rosbot_onboard</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="song.ma.18@ucl.ac.uk">Song</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- These dependencies are provided by the file system of Husarion OS in ws/src -->
  <!-- [ERROR with camera pkg]cannot successfully build astra_camera and route_admin_panel by Husarion -->
  <!-- <exec_depend>astra_camera</exec_depend> -->
  <!-- <exec_depend>route_admin_panel</exec_depend> -->
  <exec_depend>rosbot_description</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
